@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-08T01:01:56Z",
-  "count_outdated" : 570,
-  "uniques_outdated" : 396,
+  "timestamp" : "2025-09-10T00:58:08Z",
+  "count_outdated" : 571,
+  "uniques_outdated" : 397,
   "count" : 573,
   "uniques" : 399,
   "clones" : [
-    {
-      "timestamp": "2025-08-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-05T00:00:00Z",
       "count": 1,
